--- a/docs/scripts/md.tmpl
+++ b/docs/scripts/md.tmpl
@@ -1,4 +1,4 @@
-import "/src/css/api.css";
+<div class="api">
 
 {{ .EmitSynopsis }} 
 
@@ -7,3 +7,5 @@ import "{{ .ImportPath }}"
 ```
 
 {{ .EmitUsage }}
+
+</div>
